--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wesele Aleksandry i Patryka</title>
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
+
 <body>
-    
+
+
+    <script src="js/main.js"></script>
 </body>
+
 </html>
