--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wesele Aleksandry i Patryka</title>
+    <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
+
+    <nav>
+        <button class="burger">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times hide"></i>
+        </button>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Produkty</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
 
 
     <script src="js/main.js"></script>
