change nav href

--- a/src/index.html
+++ b/src/index.html
@@ -2,40 +2,40 @@
 <html lang="pl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wesele Oli i Patryka</title>
-    <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/main.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wesele Oli i Patryka</title>
+  <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
 
-    <button class="burger-btn">
-        <div class="burger-btn__box">
-          <div class="burger-btn__bars"></div>
-        </div>
-      </button>
-    
-      <nav class="nav">
-        <div class="nav__items">
-          <a href="#islands" class="nav__item">Wesele</a>
-          <a href="#offers" class="nav__item">Zmiany</a>
-          <a href="#reviews" class="nav__item">Dojazd</a>
-          <a href="#contact" class="nav__item">Kontakt</a>
-        </div>
-      </nav>
+  <button class="burger-btn">
+    <div class="burger-btn__box">
+      <div class="burger-btn__bars"></div>
+    </div>
+  </button>
 
-      <div class="logo">
-        <img src="img/logo2.png" alt="para młoda">
+  <nav class="nav">
+    <div class="nav__items">
+      <a href="#weeding" class="nav__item">Wesele</a>
+      <a href="#changes" class="nav__item">Zmiany</a>
+      <a href="#drive" class="nav__item">Dojazd</a>
+      <a href="#contact" class="nav__item">Kontakt</a>
+    </div>
+  </nav>
 
-      </div>
+  <div class="logo">
+    <img src="img/logo2.png" alt="para młoda">
 
-      
+  </div>
 
 
-    <script src="js/main.js"></script>
+
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
