--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,23 @@
     </div>
   </button>
 
-  <nav class="nav">
+  <nav class="nav nav-mobile">
     <div class="nav__items">
-      <a href="#weeding" class="nav__item">Wesele</a>
-      <a href="#changes" class="nav__item">Zmiany</a>
-      <a href="#drive" class="nav__item">Dojazd</a>
-      <a href="#contact" class="nav__item">Kontakt</a>
+      <a href="#basic-information" class="nav__item">Podstawowe inofmacje</a>
+      <a href="#weeding-plan" class="nav__item">Plan ślubu i wesela</a>
+      <a href="#menu" class="nav__item">Menu</a>
+      <a href="#QandA" class="nav__item">Q&A</a>
+      <a href="#photos" class="nav__item">Zdjęcia i filmy</a>
+    </div>
+  </nav>
+
+  <nav class="nav nav-desktop">
+    <div class="nav__items">
+      <a href="#basic-information" class="nav__item">Podstawowe inofmacje</a>
+      <a href="#weeding-plan" class="nav__item">Plan ślubu i Wesela</a>
+      <a href="#menu" class="nav__item">Menu</a>
+      <a href="#QandA" class="nav__item">Q&A</a>
+      <a href="#photos" class="nav__item">Zdjęcia i filmy</a>
     </div>
   </nav>
 
