--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wesele Oli i Patryka</title>
+  <title>Aleksandra i Patryka</title>
   <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body>
@@ -38,12 +38,88 @@
     </div>
   </nav>
 
-  <div class="logo">
+  <!-- <div class="logo">
     <img src="img/logo2.png" alt="para młoda">
 
-  </div>
+  </div> -->
+  <section>
+    <p>na mobilkach zdjęcie docięte na wysokość 250px? na całą szerokość (croped img to ma być, jak będziemy mieć zdjęcie będziemy dogrywać dokładnie jak to dociąć)</p>
+    <img height="250px" src="./img/logo-fullname.jpg">
+  </section>
 
+  <section id="contactToUs">
+    <ol>
+      <li>
+        <p>Aleksandra</p>
+        <p>tu będzie numer telefonu</p>
+      </li>
+      <li>
+        <p>Patryk</p>
+        <p>tu będzie numer telefonu</p>
+      </li>
+      <li>
+        <p>Klaudia - świadkowa</p>
+        <p>tu będzie numer telefonu</p>
+      </li>
+      <li>
+        <p>Mariusz - świadek</p>
+        <p>tu będzie numer telefonu</p>
+      </li>
+      <li>
+        <p>Basia - wsparcie</p>
+        <p>tu będzie numer telefonu</p>
+      </li>
+    </ol>
+    <p>W czasie uroczystości prosimy w sprawach bierzących </p>
+  </section>
 
+  <section id="QandA">
+    <h1>Q&A</h1>
+    <ol>
+      <li>
+        <p>Co jeżeli będzie padać?</p>
+        <p>Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz restauracji - bez względu na pogodę.</p>
+      </li>
+      <li>
+        <p>Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</p>
+        <p>Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
+      </li>
+      <li>
+        <p>Gdzie odbędzie się ceremonia zaślubin?</p>
+        <p>Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga, zjazd z S7 przy stacji benzynowej SHELL.</p>
+      </li>
+      <li>
+        <p>Co jeśli nie jem mięsa?</p>
+        <p>Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
+      </li>
+      <li>
+        <p>Czy przy sali dostępny jest parking?</p>
+        <p>Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
+      </li>
+      <li>
+        <p>Jak dojechać do sali?</p>
+        <p>Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
+      </li>
+      <li>
+        <p>Jak po weselu wrócić do domu/hotelu?</p>
+        <p>Najkorzystniej będzie zamówić taksówkę z  TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
+      </li>
+    </ol>
+  </section>
+
+  <section id="placeWithMap">
+    <h2>Mapa</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </section>
+  <section id="weddingPlan">
+    <h1>w tym miejscu będzie plan uroczystości :)</h1>
+  </section>
+  <section id="weddingMenu">
+    <h1>w tym miejscu będzie menu weselne :)</h1>
+  </section>
+  <section id="weddingPhotos">
+    <h1>w tym miejscu będą zdjęcia :)</h1>
+  </section>
 
 
   <script src="js/main.js"></script>
