--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
@@ -62,14 +62,15 @@
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927.136236972808!2d19.438120229967556!3d54.15816724726925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4c94522e116b%3A0xfec1e46d2d17f20b!2sDom%20Weselny%20Korona!5e0!3m2!1spl!2spl!4v1666095487959!5m2!1spl!2spl"
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>  -->
-              Lorem ipsum dolor sit, amet consectetur adipisicing
+            Lorem ipsum dolor sit, amet consectetur adipisicing
             elit. Neque, in. Dignissimos voluptatem facilis reprehenderit enim distinctio quam, perferendis odit saepe
             totam unde animi! Rem sapiente aperiam saepe aliquid nemo? Nesciunt reprehenderit quod quae doloribus, et
             minima, iusto illo voluptatibus velit ab veniam veritatis ducimus, quia dolorum doloremque numquam sequi
             incidunt rem sint quo quas. Eligendi dicta doloribus assumenda consequatur odio voluptas quam deserunt
             rerum. Minima at explicabo laborum eius eum illum distinctio incidunt amet natus pariatur. Asperiores quo
             commodi nostrum fuga architecto dolorum ipsum a explicabo accusantium culpa perspiciatis, quam quis sunt?
-            Cupiditate, ea ad quidem et labore reprehenderit asperiores!</p>
+            Cupiditate, ea ad quidem et labore reprehenderit asperiores!
+          </p>
         </div>
       </div>
       <div class="info__box">
