--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
     <div class="nav__items">
       <a href="#basic-information" class="nav__item">Informacje</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i wesela</a>
-      <a href="#menu" class="nav__item">Menu</a>
+      <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
-      <a href="#photos" class="nav__item">Zdjęcia i filmy</a>
+      <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
     </div>
   </nav>
 
@@ -40,7 +40,7 @@
       <a href="#weddingPlan" class="nav__item">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
-      <a href="#weedingPhotos" class="nav__item">Zdjęcia i filmy</a>
+      <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
     </div>
   </nav>
 
@@ -52,7 +52,7 @@
     <div class="wrapper">
       <p>na mobilkach zdjęcie docięte na wysokość 250px? na całą szerokość (croped img to ma być, jak będziemy mieć
         zdjęcie będziemy dogrywać dokładnie jak to dociąć)</p>
-      <img height="250px" src="./img/logo-fullname.jpg">
+      <img height="180px" src="./img/logo-fullname.jpg">
     </div>
   </section>
 
