add media for logo on desktop

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 
 <body>
   <header class="header section">
-    <h1 class="header__heading">Wesele Aleksandry i Patryka</h1>
+    <!-- <h1 class="header__heading">Wesele Aleksandry i Patryka</h1> -->
+    <img src="./img/logo-fullname.jpg">
   </header>
 
   <button class="burger-btn">
@@ -48,13 +49,13 @@
     <img src="img/logo2.png" alt="para młoda">
 
   </div> -->
-  <section class="info section-padding section">
+  <!-- <section class="info section-padding section">
     <div class="wrapper">
       <p>na mobilkach zdjęcie docięte na wysokość 250px? na całą szerokość (croped img to ma być, jak będziemy mieć
         zdjęcie będziemy dogrywać dokładnie jak to dociąć)</p>
       <img height="180px" src="./img/logo-fullname.jpg">
     </div>
-  </section>
+  </section> -->
 
   <section id="contactToUs" class="info section-padding section">
     <div class="wrapper">
@@ -177,6 +178,11 @@
         <p>w tym miejscu będą zdjęcia :)</p>
       </div>
     </div>
+
+
+    <footer class="footer">
+      <div class="wrapper"></div>
+    </footer>
 
 
     <script src="js/main.js"></script>
