change class name for img

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="header section">
     <!-- <h1 class="header__heading">Wesele Aleksandry i Patryka</h1> -->
-    <img src="./img/logo-fullname.jpg">
+    <img class="header__img" src="./img/logo-fullname.jpg">
   </header>
 
   <button class="burger-btn">
@@ -57,9 +57,9 @@
     </div>
   </section> -->
 
-  <section id="contactToUs" class="info section-padding section">
+  <section id="contactToUs" class="contact section-padding section">
     <div class="wrapper">
-      <div class="info__box">
+      <div class="contact__box">
         <h2 class="section-heading">Kontakt</h2>
         <ol>
           <li>
