few small changes

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aleksandra i Patryka</title>
+  <title>Ślub Aleksandry i Patryka</title>
   <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,6 @@
 
   <nav class="nav nav-mobile">
     <div class="nav__items">
-      <a href="#basic-information" class="nav__item">Informacje</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
@@ -37,7 +36,6 @@
 
   <nav class="nav nav-desktop">
     <div class="nav__items">
-      <a href="#basic-information" class="nav__item">Informacje</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
@@ -45,45 +43,28 @@
     </div>
   </nav>
 
-  <!-- <div class="logo">
-    <img src="img/logo2.png" alt="para młoda">
-
-  </div> -->
-  <!-- <section class="info section-padding section">
-    <div class="wrapper">
-      <p>na mobilkach zdjęcie docięte na wysokość 250px? na całą szerokość (croped img to ma być, jak będziemy mieć
-        zdjęcie będziemy dogrywać dokładnie jak to dociąć)</p>
-      <img height="180px" src="./img/logo-fullname.jpg">
-    </div>
-  </section> -->
-
   <section id="contactToUs" class="contact section-padding section">
     <div class="wrapper">
       <div class="contact__box">
         <h2 class="section-heading">Kontakt</h2>
+        <p>W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
             <h3 class="tittle">Aleksandra</h3>
-            <p>tu będzie numer telefonu</p>
           </li>
           <li>
             <h3 class="tittle">Patryk</h3>
-            <p>tu będzie numer telefonu</p>
           </li>
           <li>
             <h3 class="tittle">Klaudia - świadkowa</h3>
-            <p>tu będzie numer telefonu</p>
           </li>
           <li>
             <h3 class="tittle">Mariusz - świadek</h3>
-            <p>tu będzie numer telefonu</p>
           </li>
-          <li>
+          <!-- <li>
             <h3 class="tittle">Basia - wsparcie</h3>
-            <p>tu będzie numer telefonu</p>
-          </li>
+          </li> -->
         </ol>
-        <p>W czasie uroczystości prosimy w sprawach bierzących </p>
       </div>
     </div>
   </section>
@@ -94,34 +75,33 @@
         <h2 class="section-heading">Q&A</h2>
         <ol>
           <li>
-            <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
-            <p>Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga, zjazd z S7 przy
-              stacji benzynowej SHELL.</p>
+            <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin? 🗺️</h3>
+            <p>Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
           </li>
           <li>
-            <h3 class="tittle">Jak dojechać do sali?</h3>
+            <h3 class="tittle">Jak dojechać do sali? 🧭</h3>
             <p>Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" -
               bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li>
-            <h3 class="tittle">Czy przy sali dostępny jest parking?</h3>
+            <h3 class="tittle">Czy przy sali dostępny jest parking? 🚗</h3>
             <p>Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
           </li>
           <li>
-            <h3 class="tittle">Co jeżeli będzie padać?</h3>
+            <h3 class="tittle">Co jeżeli będzie padać? ⛈️</h3>
             <p>Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby
               ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
               restauracji - bez względu na pogodę.</p>
           </li>
           <li>
-            <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
+            <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka? 👶</h3>
             <p>Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie
               będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż.
               Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
 
           <li>
-            <h3 class="tittle">Co jeśli nie jem mięsa?</h3>
+            <h3 class="tittle">Co jeśli nie jem mięsa? 🌾</h3>
             <p>Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach
               przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą
               dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień,
@@ -131,7 +111,7 @@
 
 
           <li>
-            <h3 class="tittle">Jak po weselu wrócić do domu/hotelu?</h3>
+            <h3 class="tittle">Jak po weselu wrócić do domu/hotelu? 🚕</h3>
             <p>Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele
               ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być
               niższa niż u pozostałych firm taksówkarskich.</p>
