--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" >
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Petit+Formal+Script">
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
@@ -75,43 +76,47 @@
         <h2 class="section-heading">Q&A</h2>
         <ol>
           <li>
-            <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin? 🗺️</h3>
+            <img class="icons" src="./img/icons/federal-palace-of-switzerland.png">
+            <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
             <p>Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
           </li>
           <li>
-            <h3 class="tittle">Jak dojechać do sali? 🧭</h3>
+            <img class="icons" src="./img/icons/tracking.png">
+            <h3 class="tittle">Jak dojechać do sali?</h3>
             <p>Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" -
               bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li>
-            <h3 class="tittle">Czy przy sali dostępny jest parking? 🚗</h3>
+            <img class="icons" src="./img/icons/parking.png">
+            <h3 class="tittle">Czy przy sali dostępny jest parking?</h3>
             <p>Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
           </li>
           <li>
-            <h3 class="tittle">Co jeżeli będzie padać? ⛈️</h3>
+            <img class="icons" src="./img/icons/rainy.png">
+            <h3 class="tittle">Co jeżeli będzie padać?</h3>
             <p>Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby
               ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
               restauracji - bez względu na pogodę.</p>
           </li>
           <li>
-            <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka? 👶</h3>
+            <img class="icons" src="./img/icons/baby-boy.png">
+            <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
             <p>Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie
               będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż.
               Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
-
           <li>
-            <h3 class="tittle">Co jeśli nie jem mięsa? 🌾</h3>
+            <img class="icons" src="./img/icons/salad.png">
+            <h3 class="tittle">Co jeśli nie jem mięsa?</h3>
             <p>Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach
               przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą
               dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień,
               gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma
               możliwości ich zmiany.</p>
           </li>
-
-
           <li>
-            <h3 class="tittle">Jak po weselu wrócić do domu/hotelu? 🚕</h3>
+            <img class="icons" src="./img/icons/taxi.png">
+            <h3 class="tittle">Jak po weselu wrócić do domu/hotelu?</h3>
             <p>Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele
               ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być
               niższa niż u pozostałych firm taksówkarskich.</p>
@@ -124,7 +129,7 @@
 
   <section id="placeWithMap" class="map section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">Mapa</h2>
+      <h2 class="section-heading">mapa</h2>
       <div class="map__box">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl"
@@ -135,7 +140,7 @@
 
   <section id="weddingPlan" class="info section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">Plan Wesela</h2>
+      <h2 class="section-heading">plan Wesela</h2>
       <div class="info__box">
         <p>w tym miejscu będzie plan wesela :)</p>
       </div>
@@ -144,7 +149,7 @@
 
   <section id="weddingMenu" class="info section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">Menu Weselne</h2>
+      <h2 class="section-heading">menu Weselne</h2>
       <div class="info__box">
         <p>w tym miejscu będzie menu weselne :)</p>
       </div>
@@ -153,7 +158,7 @@
 
   <section id="weddingPhotos" class="info section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">Zdjęcia</h2>
+      <h2 class="section-heading">zdjęcia</h2>
       <div class="info__box">
         <p>w tym miejscu będą zdjęcia :)</p>
       </div>
