--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 
 <body>
   <header class="header section">
-    <!-- <h1 class="header__heading">Wesele Aleksandry i Patryka</h1> -->
-    <img class="header__img" src="./img/logo-fullname.jpg">
+    <img style="position:absolute; z-index: 1; top:100px; left:100px;" src="./img/aleksandrapatryk-transparent.png">
+    <img class="header__img" style="width: 100%; height: auto; position:absolute; z-index: 0;" src="./img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg">
   </header>
 
   <button class="burger-btn">
