change img to p

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,12 @@
 
 <body>
   <header class="header section">
-    <img style="position:absolute; z-index: 1; top:100px; left:100px;" src="./img/aleksandrapatryk-transparent.png">
-    <img class="header__img" style="width: 100%; height: auto; position:absolute; z-index: 0;" src="./img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg">
-  </header>
+    <div>
+      <p style="color: black; font-size: 64px; position:relative; z-index: 1; top:2em; left:1em;">Ślub Aleksandry i Patryka</p>
+      <!-- <img style="position:absolute; z-index: 1; top:100px; left:100px;" src="./img/aleksandrapatryk-transparent.png"> -->
+      <img class="header__img" style="width: 100%; height: auto; z-index: 0;" src="./img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg">  
+    </div>
+    </header>
 
   <button class="burger-btn">
     <div class="burger-btn__box">
