change font family, colors and img

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,18 @@
   <script src="https://kit.fontawesome.com/e9b3690385.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" >
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Petit+Formal+Script">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Petit+Formal+Script&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
+
   <header class="header section">
-    <div>
-      <p style="color: black; font-size: 64px; position:relative; z-index: 1; top:2em; left:1em;">Ślub Aleksandry i Patryka</p>
-      <!-- <img style="position:absolute; z-index: 1; top:100px; left:100px;" src="./img/aleksandrapatryk-transparent.png"> -->
-      <img class="header__img" style="width: 100%; height: auto; z-index: 0;" src="./img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg">  
-    </div>
-    </header>
+    <h1 class="header__heading">Wesele Oli i Patryka</h1>
+  </header>
 
   <button class="burger-btn">
     <div class="burger-btn__box">
@@ -50,7 +49,7 @@
   <section id="contactToUs" class="contact section-padding section">
     <div class="wrapper">
       <div class="contact__box">
-        <h2 class="section-heading">Kontakt</h2>
+        <h2 class="section-heading">kontakt</h2>
         <p>W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
@@ -143,7 +142,7 @@
 
   <section id="weddingPlan" class="info section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">plan Wesela</h2>
+      <h2 class="section-heading">plan wesela</h2>
       <div class="info__box">
         <p>w tym miejscu będzie plan wesela :)</p>
       </div>
@@ -152,7 +151,7 @@
 
   <section id="weddingMenu" class="info section-padding section">
     <div class="wrapper">
-      <h2 class="section-heading">menu Weselne</h2>
+      <h2 class="section-heading">menu weselne</h2>
       <div class="info__box">
         <p>w tym miejscu będzie menu weselne :)</p>
       </div>
