change H1 content and color

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <header class="header section">
-    <h1 class="header__heading">Wesele Oli i Patryka</h1>
+    <h1 class="header__heading">Ślub Aleksandry i Patryka</h1>
   </header>
 
   <button class="burger-btn">
