--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 
   <nav class="nav nav-mobile">
     <div class="nav__items">
+      <a href="#home" class="nav__item">Strona główna</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
@@ -39,6 +40,7 @@
 
   <nav class="nav nav-desktop">
     <div class="nav__items">
+      <a href="#home" class="nav__item">Strona główna</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
       <a href="#QandA" class="nav__item">Q&A</a>
