add id home to header

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <header class="header section">
+  <header id="home" class="header section">
     <h1 class="header__heading">Ślub Aleksandry i Patryka</h1>
   </header>
 
